--- a/Nx.Sample/Nx.Sample.csproj
+++ b/Nx.Sample/Nx.Sample.csproj
@@ -54,6 +54,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="LargeCollection.cs" />
+    <Compile Include="LargeEnumerable.cs" />
     <Compile Include="SampleModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -94,6 +95,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nx\Nx.csproj">
+      <Project>{4FD874AA-BB73-4CC0-BEBA-E3AF2932814B}</Project>
+      <Name>Nx</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
